Fix horizontal scrollbar in Chrome

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 body {
     background-color: var(--background);
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     margin: 0;
     font-family: 'Inter', sans-serif;
